# wildmeshing-toolkit

./: .gitignore  README_def.txt
app/: CMakeLists.txt
app/adamesh/src/: AdaMesh.cpp  AdaMesh.hpp  AdaMesh_insert.cpp  TetOperations.cpp  TetOperations.hpp
app/adaptive_tessellation/: AdaptiveTessellation.cpp  AdaptiveTessellation.h  AdaptiveTessellation_serialization.cpp  Collapse.cpp  LoggerDataCollector.cpp  Parameters.h  Smooth.cpp  Split.cpp  Swap.cpp  main.cpp
app/adaptive_tessellation/tests/: test_adaptive_tessellation.cpp
app/delaunay_edge_flip/: CMakeLists.txt
app/delaunay_edge_flip/app/: CMakeLists.txt  main.cpp
app/delaunay_edge_flip/src/def/: DelaunayEdgeFlip.cpp  DelaunayEdgeFlip.h  DelaunayEdgeFlip_impl.h
app/delaunay_edge_flip/tests/: CMakeLists.txt  test_def.cpp
app/harmonic_tet/: main.cpp
app/qslim/app/: main.cpp
app/remeshing/app/: main.cpp
app/remeshing/src/remeshing/: UniformRemeshing.cpp  UniformRemeshing.h
app/shortest_edge_collapse/app/: main.cpp
app/shortest_edge_collapse/src/sec/: ShortestEdgeCollapse.cpp
app/tetwild/: CMakeLists.txt
app/tetwild/app/: main.cpp
app/tetwild/src/tetwild/: EdgeCollapsing.cpp  TetWild.cpp  TetWild.h  TetWildSmooth.cpp  TriangleInsertion.cpp
cmake/recipes/: gmp_mpfr.cmake  tracy.cmake
src/wmtk/: AttributeCollection.hpp  ConcurrentTetMesh.h  ExecutionScheduler.hpp  TetMesh.cpp  TetMesh.h  TriMesh.cpp  TriMesh.h
src/wmtk/image/: QuadricIntegral.cpp  QuadricIntegral.h  TextureIntegral.cpp
src/wmtk/quadrature/: ClippedQuadrature.cpp  TriangleQuadrature.cpp
src/wmtk/utils/: BSP2D.cpp  BSP2D.hpp  Displacement.h  Energy2d.cpp  Image.cpp  PolygonClipping.cpp  Sampling.h  bicubic_interpolation.h
tests/: CMakeLists.txt  test_bsp_2d.cpp  test_quadric.cpp
